services/alertmanager/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 2000
      hostname: alertmanager
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-volume
        - name: config-volume
          configMap:
            name: config
        - name: pushover-secret
          secret:
            secretName: alertmanager-pushover-credentials
      containers:
        - name: alertmanager
          image: docker.io/prom/alertmanager
          args:
            - '--config.file=/etc/alertmanager/alertmanager.yml'
            - '--storage.path=/alertmanager'
          volumeMounts:
            - name: config-volume
              mountPath: /etc/alertmanager
            - name: data-volume
              mountPath: /alertmanager
            - name: pushover-secret
              mountPath: /run/secrets/pushover
          ports:
            - name: alertmanager
              containerPort: 9093

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: alertmanager
      port: 9093
      targetPort: alertmanager
