services/alertmanager/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://alertmanager.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: alertmanager
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: alertmanager
    gethomepage.dev/name: Alertmanager
spec:
  ingressClassName: nginx
  rules:
    - host: alertmanager.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
